add Plugin registration to framework

--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,14 @@
       "framework\\": ""
     }
   },
-  "name": "therion/framework",
+  "name": "therion/radio",
   "description": "",
   "config": {
     "platform": {
-      "php": "8.0"
+      "php": "7.4"
     }
+  },
+  "require": {
+    "ext-pdo": "*"
   }
 }
