--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
   },
   "name": "therion/framework",
   "description": "A small Framework",
+  "license": "MIT",
+  "authors": [{"name": "Sascha Emmrich"}],
   "config": {
     "platform": {
       "php": "8.1"
