--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "require": {
     "php": ">=8.1",
     "phpunit/phpunit": "^9.6",
-    "phpspec/prophecy-phpunit": "*"
+    "phpspec/prophecy-phpunit": "^1.1.0"
   }
   ,
   "require-dev": {
