--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     }
   ],
   "scripts": {
-    "test" : "vendor/bin/phpunit ./tests"
+    "test" : "vendor/bin/phpunit phpunit.xml"
   },
   "config": {
     "platform": {
