--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     }
   ],
   "scripts": {
-    "test" : "vendor/bin/phpunit phpunit.xml"
+    "test" : "vendor/bin/phpunit --configuration /var/www/framework/phpunit.xml"
   },
   "config": {
     "platform": {
